# prefect-cloud-gcp

./: Dockerfile  environment.yml  pyproject.toml  setup.py  start_prefect.sh
.github/actions/blocks/: action.yml
.github/actions/blocks-quickstart/: action.yml  blocks.py
.github/actions/deploy-container/: action.yml
.github/actions/deploy-flows/: action.yml
.github/workflows/: blocks-quickstart.yml  blocks.yml  deploy-flows.yml  getting-started.yml
flows/: marvin.py
